tests/errors/complex_log_zero.ki
discard import("complex").log(import("complex").zero)
